aula2 html5 proway

--- a/html/index.html
+++ b/html/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> <!--só tem um head, assim como body e html-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Primeira aula - HTML5</title>
-</head>
+  <head> <!--só tem um head, assim como body e html-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primeira aula - HTML5</title>
+  </head>
 
-<body>
-  <!--as tags dentro do body podem se repetir-->
-  <h1>Jornal do Brasil</h1>
-  <h2>Título da imagem</h2>
-  <img src="./images.jfif" alt="">
-  <h3>Título do texto</h3>
-  <p>
-    Lorem ipsum dolor sit amet. Aut sint accusamus est amet odit eum voluptas galisum. Quo rerum ducimus vel recusandae
-    maiores qui tenetur harum ab facere quia in ipsam recusandae. Aut iure atque est quibusdam alias quo harum magnam
-    sed doloremqe quaerat id internos corporis.
-  </p> 
-  <h3>Jornal do Brasil</h3>
-  <h4>Jornal do Brasil</h4>
-  <h5>Jornal do Brasil</h5>
-  <h6>Jornal do Brasil</h6>
-  <p>
-    Lorem ipsum dolor sit amet. Aut sint accusamus est amet odit eum voluptas galisum. Quo rerum ducimus vel recusandae
-    maiores qui tenetur harum ab facere quia in ipsam recusandae. Aut iure atque est quibusdam alias quo harum magnam
-    sed doloremqe quaerat id internos corporis.
-  </p> 
-</body>
+  <body>
+    <!--as tags dentro do body podem se repetir-->
+    <h1>Jornal do Brasil</h1>
+    <h2>Título da imagem</h2>
+    <img src="./images.jfif" alt>
+    <h3>Título do texto</h3>
+
+    <p>
+      <h3>This is my <abbr title="Purrrrrr">cat</h3></abbr></p>
+
+    One of the most common equations in all of physics is
+    <var>E</var>=<var>m</var><var>c</var><sup>2</sup>.
+    <p>
+      Almost every developer's favorite molecule is
+      C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>, also known as
+      "caffeine."
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet. Aut sint accusamus est amet odit eum voluptas
+      galisum. Quo rerum ducimus vel recusandae
+      maiores qui tenetur harum ab facere quia in ipsam recusandae. Aut iure
+      atque est quibusdam alias quo harum magnam
+      sed doloremqe quaerat id internos corporis.
+    </p>
+    <h3>Jornal do Brasil</h3>
+    <h4>Jornal do Brasil</h4>
+    <h5>Jornal do Brasil</h5>
+    <h6>Jornal do Brasil</h6>
+    <p>
+      Lorem ipsum dolor sit amet. Aut sint accusamus est amet odit eum voluptas
+      galisum. Quo rerum ducimus vel recusandae
+      maiores qui tenetur harum ab facere quia in ipsam recusandae. Aut iure
+      atque est quibusdam alias quo harum magnam
+      sed doloremqe quaerat id internos corporis.
+    </p>
+  </body>
 
 </html>
