--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Pokédex</h1>
     <h3>Espécies</h3>
     <button type="button"><a href="./charizard.html">Charizard</a></button>
-    <button type="button"><a href="./model1.html">Veja o modelo 2</a></button>
+    <button type="button"><a href="./bulbasaur.html">Bulbasaur</a></button>
     <button type="button"><a href="./model1.html">Veja o modelo 3</a></button>
     <button type="button"><a href="./model1.html">Veja o modelo 4</a></button>
     <button type="button"><a href="./model1.html">Veja o modelo 5</a></button>
