--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokédex</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
     <h3>Espécies</h3>
     <button type="button"><a href="./charizard.html">Charizard</a></button>
     <button type="button"><a href="./bulbasaur.html">Bulbasaur</a></button>
-    <button type="button"><a href="./model1.html">Veja o modelo 3</a></button>
-    <button type="button"><a href="./model1.html">Veja o modelo 4</a></button>
-    <button type="button"><a href="./model1.html">Veja o modelo 5</a></button>
+    <button type="button"><a href="./model1.html"></a></button>
+    <button type="button"><a href="./model1.html"></a></button>
+    <button type="button"><a href="./model1.html"></a></button>
 </body>
 </html>
